# zoom_mask_creator

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: Eagle100_Group100.yml  Eagle100_Slab.yml  Manticore-Mini.toml  Sibelius_5Mpc.yml
src/scripts/: run_standalone.py
src/zoom_mask_creator/: io.py  map.py  mask.py  params.py  peano.py  plot.py  vr.py
src/zoom_mask_creator/scripts/: run_standalone.py
