[build-system]
requires = ["setuptools >= 60"]
build-backend = "setuptools.build_meta"

[project]
name = "zoom_mask_creator"
description = "Make Lagrangian mask outlines for Virgo Consortium zoom-in simulations"
license = {text = "BSD 3-Clause License"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "numpy",
    "h5py",
    "pyaml",
    "scipy",
    "mpi4py",
    "matplotlib",
    "pyread_eagle @ git+https://github.com/kyleaoman/pyread_eagle.git",
    "read_swift @ git+https://github.com/stuartmcalpine/read_swift.git"
]
requires-python = ">=3.8,<3.11"
version = "0.0.1"

[tool.setuptools.packages.find]
where = ["src"]  # list of folders that contain the packages (["."] by default)

[project.scripts]
zoom-mask-creator = "scripts.run_standalone:main"
