[build-system]
requires = ["setuptools >= 61"] # PEP 621
build-backend = "setuptools.build_meta"

[project]
name = "zoom_mask_creator"
description = "Make Lagrangian mask outlines for Virgo Consortium-style zoom-in simulations."
readme = "README.md"
requires-python = ">=3.7"
license = {text = "BSD 3-Clause License"}
classifiers = [
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: BSD 3-Clause License",
]
dependencies = [
    "numpy<1.24",
    "h5py",
    "pyaml",
    "scipy",
    "mpi4py",
    "matplotlib",
    "pyread_eagle @ git+https://github.com/kyleaoman/pyread_eagle.git",
    "pyread_swift>=1.1.0",
    "toml",
]
version = "0.0.2"
authors = [
  { name="Stuart McAlpine", email="stuart.mcalpine@fysik.su.se" },
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
zoom-mask-creator = "zoom_mask_creator.scripts.run_standalone:main"
